Armitage Changelog
==================

In Progress
-----------
- Doubled wait time for Meterpreter ls command to complete.
- Armitage now shows psexec option instead of smb on Login menu for
  Windows hosts (when smb service is present).
- Fixed bug preventing manual import of a single host

24 Apr 11 - Happy Birthday Gerry Edition
---------
- Added a check to prevent jerk faces from entering an empty nick in
  collaborative mode. :)
- Fixed a potential dead-lock condition with the screenshot/webcam
  shot tab.
- Armitage -> Listeners -> Reverse now binds to 0.0.0.0. 
- Host import now posts an event to the collab mode shared event log
- added an option to display an MOTD message to clients that connect
  to Armitage in the collaboration mode. Use -m or --motd before
  --server and specify a file, e.g.:

  armitage -m /path/to/motd.txt --server ...

  Clients will see this message when they connect.
- Added Meterpreter -> Access -> Pass Session to send a meterpreter
  session to a handler set up on another host.
- Armitage now sets ExitOnSession to false for multi/handlers started
  within Armitage.
- Pivoting and ARP Scan dialogs now highlight first option by default.
- Added a sanity check to the Route class to prevent malformed IPs
  from screwing up sorting.
- Removed sqlite3 from the database options. I should have done this
  long ago--it has no place in Armitage.
- Armitage now intercepts meterpreter "shell" command and opens a 
  new tab with the cmd.exe interaction in it.

17 Apr 11 - Change Log 
---------
- Windows command shell interactions are now less likely to die. How
  oh how did we get here? Armitage interacts with cmd.exe through a
  Meterpreter channel. If an unnecessary read happens, it ties up the
  meterpreter session for 10-20s AND the channel dies. If you typed
  commands in too quickly, it's probable that Armitage would do an
  unnecessary read and the channel would die. I believe I've headed 