@@ -7,6 +7,9 @@ In Progress
 - Armitage now shows psexec option instead of smb on Login menu for
   Windows hosts (when smb service is present).
 - Fixed bug preventing manual import of a single host
+- Removed automatic resending of console commands that didn't appear
+  sent. This was a work-around for a msf bug that may not be present
+  anymore. We'll find out.
 
 24 Apr 11 - Happy Birthday Gerry Edition
 ---------
